--- a/PythonAXF/uwsgi.ini
+++ b/PythonAXF/uwsgi.ini
@@ -7,9 +7,10 @@
 socket=0.0.0.0:8030
 
 # 配置工程目录
-chdir=/var/www/axf/DjangoLearning/PythonAXF
+chdir=/var/www/ptx/
 # wsgi文件
-# /var/www/axf/Python181AXF/wsgi.py
+
+# /var/www/axf/DjangoLearning/PythonAXF/PythonAXF/wsgi
 wsgi-file=PythonAXF/wsgi.py
 
 # 进程数量
